BB-5556 Wirecard integration: - CheckoutBundle\..\workflows.yml: Added checkoutId to transactionOptions to use it on purchase action to find active initiate transaction - InitiateTransaction is bound to checkout object and not reused anymore - Fixed multiple phpdoc blocks - Test mode is not inserted anymore as a transaction option,  config field is used where needed - Moved request stack access from gateway to paymentmethod - Fixed several form fields: names, missing translations, wrong types - ShopId config parameter  is not required anymore - Implemented mapping logic from oro language codes to wirecard language codes - Replaced deprecated PaymentMethodProviderRegistry use with composite_provider - Added missing validation.yml - Fixed JS requests duplications - Added orderDescription

--- a/Resources/views/layouts/default/imports/oro_payment_method_options/layout.html.twig
+++ b/Resources/views/layouts/default/imports/oro_payment_method_options/layout.html.twig
@@ -23,7 +23,7 @@
                     {{ form_row(child, {class_prefix: class_prefix}) }}
                 </div>
             {% endfor %}
-            <div class="hidden" data-wirecard-errors></div>
+            <div data-wirecard-errors></div>
         </div>
     </div>
 {% endblock %}
