--- a/Resources/views/layouts/default/imports/oro_payment_method_options/form.html.twig
+++ b/Resources/views/layouts/default/imports/oro_payment_method_options/form.html.twig
@@ -6,10 +6,12 @@
 
     {%- set type = type|default('password') -%}
     <input type="{{ type }}" {{ block('widget_attributes') }} {% if value is not empty %}value="{{ value }}" {% endif %}/>
-    <span class="tooltip-container">
-        <a href="javascript: void(0);" class="tooltip-trigger">{{ 'oro.wirecard.credit_card.whats_this'|trans }}</a>
-        <span class="tooltip top tooltip--animated">
-            <span class="tooltip-inner">{{ 'oro.wirecard.credit_card.tooltip'|trans|nl2br }}</span>
-        </span>
-    </span>
+    <a href="javascript: void(0);"
+       data-toggle="tooltip"
+       data-title="{{ 'oro.paypal.credit_card.tooltip'|trans }}"
+       data-html="true"
+       data-container="body"
+    >
+        {{ 'oro.wirecard.credit_card.whats_this'|trans }}
+    </a>
 {% endblock %}
