--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -4,12 +4,14 @@
     'credit-card-expiration-date': {'message': 'oro.payment.validation.month', 'payload': null}
     } %}
 
-    <div class="{{ class_prefix }}-form__select-container" {{ block('widget_attributes') }} data-validation="{{ validation|json_encode }}">
-        <div class="{{ class_prefix }}-form__select {{ class_prefix }}-form__select--exp-month">
-            {{ form_widget(form.month, {'attr': {'data-expiration-date-month': true}}) }}
-        </div>
-        <div class="{{ class_prefix }}-form__select {{ class_prefix }}-form__select--exp-year">
-            {{ form_widget(form.year, {'attr': {'data-expiration-date-year': true}}) }}
+    <div {{ block('widget_attributes') }} data-validation="{{ validation|json_encode }}">
+        <div class="{{ class_prefix }}-form__select-container">
+            <div class="{{ class_prefix }}-form__select {{ class_prefix }}-form__select--exp-month">
+                {{ form_widget(form.month, {'attr': {'data-expiration-date-month': true}}) }}
+            </div>
+            <div class="{{ class_prefix }}-form__select {{ class_prefix }}-form__select--exp-year">
+                {{ form_widget(form.year, {'attr': {'data-expiration-date-year': true}}) }}
+            </div>
         </div>
     </div>
 {%- endblock %}
@@ -23,9 +25,7 @@
     } %}
     <div {{ block('widget_attributes') }} data-validation="{{ validation|json_encode }}">
         {% for child in form.children %}
-            <div class="{{ class_prefix }}__form__row">
-                {{ form_row(child, {class_prefix: class_prefix}) }}
-            </div>
+            {{ form_row(child, {class_prefix: class_prefix}) }}
         {% endfor %}
     </div>
 {%- endblock %}
