BB-7251: nodejs for css assets (#20013)
## Webpack enablement
- added OroAssetBuildCommand (oro:assets:build) to build assets with webpack, that is triggered on install and update
- added cleanup-stats-plugin to hide big useless output of mini-css-extract-plugin plugin
- moved configuration from `oro_requirejs.js_engine` to `oro_asset.js_engine`
- Added NodeCommandRunner to run console commands with Node JS
- Refactored OroBuildCommand to use NodeCommandRunner and DI instead of container injection
- updated styles to be compatible with webpack build. Fixed errors in scss.
- updated requirements check to make node and npm required dependecies
- added helper class - NodeJsExecutableFinder that helps to get nodejs path
- added documentation for configuration options
- added mention to changelog about removed configuration option and deleted assetic bundle
- updated WebTestCase to cleanUp command output without errors
- moved tracking.php to the package, now application only referencing file from the package instead of copy-paste
- added browserlist according to system requirements
- updated excludes for php cs to don't check tracking.php files and doctrine-extension package

## Incompatibility issue
- locked symfony version to 3.4.18 as 3.4.19 comes with incompatible changes

## Tests
- skipped unstable feature `featured_menu_ignore_a_field_that_matches_the_default_language.feature`
- moved cat*.jpg files to TestFrameworkBundle in order to remove symlinks and reduce file duplication

## Dependencies
- removed dependency on AsseticBundle
- updated dev.locks for all applications
- enabled COMPOSER_MIRROR_PATH_REPOS=1 for composer install command on ## CI
- fixed file locator to work correctly with COMPOSER_MIRROR_PATH_REPOS option

--- a/Resources/views/layouts/default/imports/oro_payment_method_options/layout.html.twig
+++ b/Resources/views/layouts/default/imports/oro_payment_method_options/layout.html.twig
@@ -28,7 +28,7 @@
 
 {% block _payment_methods_wirecard_seamless_paypal_widget %}
     <div class="{{ class_prefix }}-form__payment-methods">
-        <img class="checkout-form__img" src="{% image '@OroWirecardBundle/Resources/public/default/images/pp-express-checkout-method.png' %}{{ asset_url }}{% endimage %}">
+        <img class="checkout-form__img" src="{{ asset('bundles/orowirecard/default/images/pp-express-checkout-method.png') }}">
         <div>{{ 'oro.wirecard.paypal.redirect_to_paypal'|trans|nl2br }}</div>
     </div>
 {% endblock %}
