--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -1,7 +1,15 @@
 {% block oro_wirecard_seamless_credit_card_expiration_date_widget -%}
     {% set validation = {
-    'credit-card-expiration-date-not-blank': {'message': 'oro.payment.validation.expiration_date', 'payload': null},
-    'credit-card-expiration-date': {'message': 'oro.payment.validation.month', 'payload': null}
+        'credit-card-expiration-date-not-blank': {
+            'message': 'oro.payment.validation.expiration_date',
+            'payload': null,
+            'formSelector': '[data-wirecard-form], form'
+        },
+        'credit-card-expiration-date': {
+            'message': 'oro.payment.validation.month',
+            'payload': null,
+            'formSelector': '[data-wirecard-form], form'
+        }
     } %}
 
     <div {{ block('widget_attributes') }} data-validation="{{ validation|json_encode }}">
