BAP-18804: Configure HTML sanitizer for popovers (#23866)
 - added tags related to HTML table as allowed for sanitizer
 - fixed font-size for popover content
 - added "data"-attribute to whit list of tooltips sanitizer
 - href="javascript: void(0);" replaced with href="#"
 - fixed issue with tab switching
 - fixed selector for scrollspy container
 - fixed popover in modal dialogs
 - added few more tags to white list of HTML sanitizer

--- a/Resources/views/layouts/default/imports/oro_payment_method_options/form.html.twig
+++ b/Resources/views/layouts/default/imports/oro_payment_method_options/form.html.twig
@@ -9,7 +9,7 @@
 
     {%- set type = type|default('text') -%}
     <input type="{{ type }}" {{ block('widget_attributes') }} {% if value is not empty %}value="{{ value }}" {% endif %}/>
-    <a href="javascript: void(0);"
+    <a href="#"
        data-toggle="tooltip"
        data-title="{{ 'oro.paypal.credit_card.tooltip'|trans }}"
        data-html="true"
