--- a/Resources/views/layouts/default/imports/oro_payment_method_options/layout.html.twig
+++ b/Resources/views/layouts/default/imports/oro_payment_method_options/layout.html.twig
@@ -28,9 +28,11 @@
 
 {% block _payment_methods_wirecard_seamless_paypal_widget %}
     <div class="{{ class_prefix }}-form__payment-methods">
-        <ul class="{{ class_prefix }}-form__payment-methods-list">
+        <ul class="{{ class_prefix }}-form__payment-methods-list" aria-label="{{ 'oro_frontend.avaliable_credit_cards.aria_label'|trans }}">
             {% for cc_name in ['paypal', 'mastercard', 'visa', 'discover', 'american_express'] %}
-                <li class="{{ class_prefix }}-form__payment-methods-item"><i class="credit-card-icon credit-card-icon_{{ cc_name }}"></i></li>
+                <li class="{{ class_prefix }}-form__payment-methods-item" aria-label="{{ cc_name }}">
+                    <span class="credit-card-icon credit-card-icon_{{ cc_name }}" aria-hidden="true"></span>
+                </li>
             {% endfor %}
         </ul>
         <div class="{{ class_prefix }}-form__payment-methods-form">{{ 'oro.wirecard.paypal.redirect_to_paypal'|trans|nl2br }}</div>
